--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
   <script src="index.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -263,7 +265,54 @@
   <div class="espaco"></div>
   <div class="rodape"></div>
 
-  <div id="magica"></div>
+  <div id="magica">
+    <main class="star-wars">
+      <h2 class="star">Definição de Física</h2>
+      <p class="star">
+        No âmago do universo, onde estrelas dançam em sintonia,
+        Reside a essência da ciência, a Física em sua harmonia.
+        Uma sinfonia cósmica, que desvenda segredos profundos,
+        Com a dança dos átomos, em movimentos vagabundos.
+      </p>
+      <p class="star">
+        A Física é a poetisa do cosmos, com sua pluma de luz,
+        Desvendando mistérios, revelando verdades seduz.
+        É a língua universal que a natureza escolheu,
+        Para contar histórias grandiosas que o Universo escreveu.
+      </p>
+      <p class="star">
+        Ela mergulha nas entranhas do espaço e do tempo,
+        Desvendando enigmas, como um sábio poema.
+        Com equações e fórmulas, desvela a realidade,
+        Em um ballet de partículas, dançando na eternidade.
+      </p>
+      <p class="star">
+        É na Física que o vento suspira em ondas sonoras,
+        E a luz, qual bailarina, atravessa as horas.
+        Os corpos se atraem, num abraço gravitacional,
+        Enquanto o tempo flui, em seu curso fenomenal.
+      </p>
+      <p class="star">
+        Das leis da termodinâmica à relatividade,
+        A Física tece o tecido da nossa realidade.
+        E nos olhos do cientista, brilha um sonho profundo,
+        De compreender o universo, em cada canto do mundo.
+      </p>
+      <p class="star">
+        Pois a Física é a melodia do Cosmos, uma canção,
+        Que ecoa nas mentes curiosas, com pura emoção.
+        Ela nos convida a dançar na valsa dos átomos,
+        A desvendar os mistérios cósmicos, em todos os planos.
+      </p>
+      <p class="star"> 
+        Assim, a Física nos inspira a contemplar o infinito,
+        A buscar respostas, num constante e eterno aflito.
+        E enquanto existir curiosidade em nossos corações,
+        A Física, bela e poética, seguirá suas criações.
+      </p>
+    </main>
+
+  </div>
 
   </div>
 </body>
