--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
   <div class="rodape"></div>
 
   <div id="magica">
-    <main class="star-wars">
+    <div id="star-wars">
       <h2 class="star">Definição de Física</h2>
       <p class="star">
         No âmago do universo, onde estrelas dançam em sintonia,
-        Reside a essência da ciência, a Física em sua harmonia.
+        reside a essência da ciência, a Física em sua harmonia.
         Uma sinfonia cósmica, que desvenda segredos profundos,
         Com a dança dos átomos, em movimentos vagabundos.
       </p>
@@ -310,7 +310,7 @@
         E enquanto existir curiosidade em nossos corações,
         A Física, bela e poética, seguirá suas criações.
       </p>
-    </main>
+    </div>
 
   </div>
 
