--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <div class="gato">
         <h1><strong class="cabeca22">Continuando...</strong></h1>
         <br>
-        <p class="textos2">Portanto , a física é uma ciência incrível e emocionante, cheia de descobertas e
+        <p id="textos2">Portanto , a física é uma ciência incrível e emocionante, cheia de descobertas e
           possibilidades, oferecendo uma visão profunda sobre nosso universo e nos convidando a desvendar mistérios do
           nosso mundo, desenvolvendo nosso pensamento e nos fazendo crescer como seres racionais.
           Enfim, a física é de suma importância para o desenvolvimento da nossa sociedade atual, contribuindo para
