--- a/sambaqui.html
+++ b/sambaqui.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Física Na Mente</title>
+  <title>Sambaqui</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
   <script src="index.js"></script>
@@ -14,10 +14,7 @@
 
 <body>
   <div class="cabeçalho">
-    <a href="index.html">
-      <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
-    </a>
-
+    <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <h1 style="text-align: center;">Tópicos</h1>
@@ -140,115 +137,152 @@
             <div class="circle"></div>
           </div>
         </button></a>
+      <br>
+
     </div>
+    <div class="conteudo2">
+      <div id="main">
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+          </div></span>
 
-    <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
-        </div></span>
-    </div>
-  </div>
-  <div>
+        <br>
 
-    <style>
-      div {
-        text-align: center;
-      }
-    </style>
-    <div class="conteudo">
-      <h1 class="all"><strong>Sambaqui</strong></h1>
-      <br>
-      <h2 class="all"><strong>“O que é Sambaqui?”</strong></h2>
-      <br>
-      <p class="SambaquiLetra">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como ritual de
-        sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de
-        Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
-      <br>
-      <h2 class="all"><strong>"Localização dos Sambaquis em nossa região “Deve conter mapa com
-          indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
-          tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
-          etc.”</strong></h2>
-
-
-      <p class="all">Figura 1 – Mapa dos sambaquis</p>
+        <div id="center">
+          <h1><strong class="textosTitulo">Sambaqui</strong></h1>
+        </div>
+        <br>
+        <div id="center">
+          <h2><strong class="textosTitulo">“O que é Sambaqui?”</strong></h2>
+        </div>
+        <br>
+        <p class="margemsambaqui">Sambaqui é uma variação de origem tupi, sambaquis são amontoados de conchas usado como
+          ritual de
+          sepultamento entre outras coisas, os sambaquis podem ser encontrados ao longo do litoral nordestino, no Rio de
+          Janeiro, em São Paulo, e em outras partes do litoral gaúcho.</p>
+        <br>
+        <div id="center">
+          <h2><strong class="textosTitulo">"Localização dos Sambaquis em nossa região “Deve conter mapa com
+              indicação de ao menos 5 locais onde se encontram sambaquis. Pode ser
+              tanto de Joinville, ou Araquari, ou São Francisco do sul ou Barra do Sul,
+              etc.”</strong></h2>
+        </div>
 
 
-      <img class="alight" class="all" src="Imagens/imagem1 sambaqui.jpeg" width="70%" alt="foto mapa">
-      <p class="SambaquiLetras">Dos autores, 2023</p>
+        <p class="margemsambaqui">Figura 1 – Mapa dos sambaquis</p>
+
+        <div class="img-container">
+          <img src="Imagens/imagem1 sambaqui.jpeg" width="70%" alt="foto mapa">
+        </div>
+        <p class="margemsambaqui">Dos autores, 2023</p>
+        <br>
+
+        <div id="center">
+          <h2><strong class="textosTitulo">povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</strong>
+          </h2>
+        </div>
+        <br>
+        <p class="margemsambaqui">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi
+          “construído” em
+          aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então
+          certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
+        <br>
+        <div id="center">
+          <h2><strong class="textosTitulo">"Como esse povo chegou até a América? E, pelos elementos que existem
+              na arqueologia, quando habitaram a região da Baía da Babitonga?"</strong></h2>
+        </div>
+        <br>
+        <p class="margemsambaqui">Como apresentado pelo Professor Ivan, este povo possuía traços extremamente asiáticos,
+          tendo muita similaridade com os povos originários, popularmente chamados de Índios. Por este motivo e também
+          por
+          datação arqueológica, é muito teorizado que o povo sambaqui tenha vindo pelo Estreito de Bering. Já a duração
+          Sambaquis é de aproximadamente é 3 mil à 5 mil anos atrás</p>
+        <br>
+        <div id="center">
+          <h2><strong class="textosTitulo">"Qual era a principal fonte de alimentação deles? Como se sabe essa
+              informação?"</strong></h2>
+        </div>
+        <br>
+        <p class="margemsambaqui"> A principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar.
+          Eu
+          sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram
+          sobre isso na visita do museu do sambaqui em Joinville, e foi explicado na aula de história com o Professor
+          Ivan
+          Furmann.</p>
+        <br>
+        <p class="margemsambaqui">Figura 2- alimentação</p>
+        <div class="img-container">
+          <img class="alight" src="Imagens/sambaqui img2.jpeg" width="70%" alt="sambaqui figura 2">
+        </div>
+        <p class="SambaquiLetras">Dos autores, 2023</p>
+        <br>
+        <div id="center">
+          <h2><strong class="textosTitulo">"O que é um zoólito: Explique e apresente alguma foto que contenha um
+              exemplo de um deles."</strong></h2>
+        </div>
+        <p class="margemsambaqui">Os Zoólitos são esculturas talhadas em pedra, elas têm valor arqueológico e artístico.
+        </p>
+        <br>
+        <p class="margemsambaqui">Figura 3- Zoólitos</p>
+        <br>
+        <div class="img-container">
+        <img src="Imagens/sambaqui img3.jpeg" alt="figura 3">
+      </div>
+      <p class="margemsambaqui">Dos autores, 2023</p>
       <br>
-      <h2 class="all"><strong>povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</strong></h2>
+      <div id="center">
+        <h2><strong class="textosTitulo"> Todo sambaqui contém sepultamentos?</strong></h2>
+      </div>
       <br>
-      <p class="SambaquiLetra">Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi
-        “construído” em
-        aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então
-        certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).</p>
-      <br>
-      <h2><strong>"Como esse povo chegou até a América? E, pelos elementos que existem
-          na arqueologia, quando habitaram a região da Baía da Babitonga?"</strong></h2>
-      <br>
-      <p class="SambaquiLetra">Como apresentado pelo Professor Ivan, este povo possuía traços extremamente asiáticos,
-        tendo muita similaridade com os povos originários, popularmente chamados de Índios. Por este motivo e também por
-        datação arqueológica, é muito teorizado que o povo sambaqui tenha vindo pelo Estreito de Bering. Já a duração
-        Sambaquis é de aproximadamente é 3 mil à 5 mil anos atrás</p>
-      <br>
-      <h2><strong>"Qual era a principal fonte de alimentação deles? Como se sabe essa
-          informação?"</strong></h2>
-      <br>
-      <p class="SambaquiLetra"> A principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar. Eu
-        sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram
-        sobre isso na visita do museu do sambaqui em Joinville, e foi explicado na aula de história com o Professor Ivan
-        Furmann.</p>
-      <br>
-      <p class="SambaquiLetra">Figura 2- alimentação</p>
-      <img class="alight" src="Imagens/sambaqui img2.jpeg" width="70%" alt="sambaqui figura 2">
-      <p class="SambaquiLetras">Dos autores, 2023</p>
-      <br>
-      <h2><strong>"O que é um zoólito: Explique e apresente alguma foto que contenha um
-          exemplo de um deles."</strong></h2>
-      <p class="SambaquiLetra">Os Zoólitos são esculturas talhadas em pedra, elas têm valor arqueológico e artístico.
-      </p>
-      <br>
-      <p class="SambaquiLetra">Figura 3- Zoólitos</p>
-      <br>
-      <img class="alight" src="Imagens/sambaqui img3.jpeg" width="70%" alt="figura 3">
-      <p class="SambaquiLetra">Dos autores, 2023</p>
-      <br>
-      <h2><strong> Todo sambaqui contém sepultamentos?</strong></h2>
-      <br>
-      <p class="SambaquiLetra">Arqueologicamente já foram encontrados restos alimentares, ferramentas, armas, adornos e
+      <p class="margemsambaqui">Arqueologicamente já foram encontrados restos alimentares, ferramentas, armas, adornos e
         sepultamentos dos que viveram ali. Então sim contém sepultamentos. (SAMBAQUIS - ARQUEOLOGIA BRASILEIRA. [s. d.].
         Museu Nacional - UFRJ, 2023).</p>
       <br>
-      <p class="SambaquiLetra"> Figura 4 - sepultamentos</p>
-      <img class="alight" src="Imagens/Sambaqui img4.jpeg" alt="Figura sepultamento" width="70%">
+      <p class="margemsambaqui"> Figura 4 - sepultamentos</p>
+      <div class="img-container">
+        <img class="alight" src="Imagens/Sambaqui img4.jpeg" alt="Figura sepultamento" width="70%">
+      </div>
       <p class="SambaquiLetras">Dos autores, 2023</p>
       <br>
-      <h2><strong> Existem outras partes do Brasil e do Mundo que contenham construções
-        humanas parecidas com as dos Sambaquis da região da Baía da
-        Babitonga? </strong></h2>
-        <br>
-        <p class="SambaquiLetra">Sim, em várias regiões costeiras pelo mundo como desde a Austrália e Nova Zelândia e outras ilhas da Oceania à África, América do Norte e Europa e geralmente são chamados de “shell mound” ou “shell middens” . Já no Brasil, além da região da Baía da Babitonga, temos nas regiões costeiras do sudeste brasileiro como nos estados do Rio de Janeiro e São Paulo, assim como mais ao sul, em Santa Catarina e Paraná principalmente. (DE CASTILHO, Pedro V, 2008)</p>
-        <br>
-        <p class="SambaquiLetra"> Figura 5 - amontoados de conchas no mundo</p>
+      <div id="center">
+        <h2><strong class="textosTitulo"> Existem outras partes do Brasil e do Mundo que contenham construções
+            humanas parecidas com as dos Sambaquis da região da Baía da
+            Babitonga? </strong></h2>
+      </div>
+      <br>
+      <p class="margemsambaqui">Sim, em várias regiões costeiras pelo mundo como desde a Austrália e Nova Zelândia e
+        outras ilhas da Oceania à África, América do Norte e Europa e geralmente são chamados de “shell mound” ou “shell
+        middens” . Já no Brasil, além da região da Baía da Babitonga, temos nas regiões costeiras do sudeste brasileiro
+        como nos estados do Rio de Janeiro e São Paulo, assim como mais ao sul, em Santa Catarina e Paraná
+        principalmente. (DE CASTILHO, Pedro V, 2008)</p>
+      <br>
+      <p class="margemsambaqui"> Figura 5 - amontoados de conchas no mundo</p>
+      <div class="img-container">
         <img class="alight" src="Imagens/Sambaqui img5.jpeg" alt="Figura 5" width="70%">
-        <p class="SambaquiLetras">Dos autores, 2023</p>
-        <br>
-        <h2><strong> Todos os sambaquis encontrados estão intactos ou alguns já foram
-          destruídos? Como isso aconteceu?</strong></h2>
-          <br>
-          <p class="SambaquiLetra">Segundo Ana Claudia Bruhmuller, alguns já foram destruídos, outros intactos, pois teve a exploração descuidada, alguns por causa natural de desastres, e outros por causa de destruição sem consentimento que aquilo era um sambaqui, etc.</p>
-          <br>
-          <p class="SambaquiLetra">Figura 7- Preservação do patrimônio arqueológico</p>
-          <img class="alight" src="Imagens/Sambaqui img6.jpeg" alt="Figura 7" width="70%" >
-          <p class="SambaquiLetras">Dos autores, 2023</p>
-          <br>
-          <h2><strong>Qual a importância de preservar os sambaquis?</strong></h2>
-          <br>
-          <p class="SambaquiLetra"> A importância da preservação dos sambaquis vem de questão histórica e cultural, preservar dados de um povo antigo afins sociais e arqueológicos.</p>
+      </div>
+      <p class="SambaquiLetras">Dos autores, 2023</p>
+      <br>
+      <div id="center">
+        <h2><strong class="textosTitulo"> Todos os sambaquis encontrados estão intactos ou alguns já foram
+            destruídos? Como isso aconteceu?</strong></h2>
+      </div>
+      <br>
+      <p class="margemsambaqui">Segundo Ana Claudia Bruhmuller, alguns já foram destruídos, outros intactos, pois teve a
+        exploração descuidada, alguns por causa natural de desastres, e outros por causa de destruição sem consentimento
+        que aquilo era um sambaqui, etc.</p>
+      <br>
+      <p class="margemsambaqui">Figura 7- Preservação do patrimônio arqueológico</p>
+      <div class="img-container">
+        <img class="alight" src="Imagens/Sambaqui img6.jpeg" alt="Figura 7" width="70%">
+      </div>
+      <p class="SambaquiLetras">Dos autores, 2023</p>
+      <br>
+      <div id="center">
+        <h2><strong class="textosTitulo">Qual a importância de preservar os sambaquis?</strong></h2>
+      </div>
+      <br>
+      <p class="margemsambaqui"> A importância da preservação dos sambaquis vem de questão histórica e cultural,
+        preservar dados de um povo antigo afins sociais e arqueológicos.</p>
     </div>
     <div class="rodape"></div>
 
   </div>
-
-</body>
-
-</html>
