--- a/sambaqui.html
+++ b/sambaqui.html
@@ -146,7 +146,7 @@
           </div></span>
 
         <br>
-
+          <div class="all1">
         <div id="center">
           <h1><strong class="textosTitulo">Sambaqui</strong></h1>
         </div>
@@ -167,7 +167,7 @@
               etc.”</strong></h2>
         </div>
 
-
+      
         <p class="margemsambaqui">Figura 1 – Mapa dos sambaquis</p>
 
         <div class="img-container">
@@ -176,6 +176,7 @@
         <p class="margemsambaqui">Dos autores, 2023</p>
         <br>
 
+        <div class="all1">
         <div id="center">
           <h2><strong class="textosTitulo">povo que vivia no Sambaqui era da espécie Homo Sapiens? Explique.</strong>
           </h2>
@@ -284,5 +285,6 @@
         preservar dados de um povo antigo afins sociais e arqueológicos.</p>
     </div>
     <div class="rodape"></div>
+      </div>
 
   </div>
