--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -219,7 +220,7 @@
     <div class="texto1">
 
 
-      <img src="Imagens/einsten.gif" alt="" class="veio">
+      <img src="Imagens/atomo.png" alt="" class="veio">
       <div class="display: grid">
         <h1><strong class="cabeca2"> Vou Te Mostrar Que Física Não É Chata!</strong></h1>
         <br>
@@ -257,7 +258,7 @@
         </p>
         <br>
       </div>
-      <img src="Imagens/sweet-dreams.gif" class="FelixCatus" alt="">
+      
 
     </div>
   </div>
