--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -9,7 +9,7 @@
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
   <script src="index.js"></script>
-
+  <link rel="stylesheet" href="media_key.css">
 </head>
 
 <body>
