--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -9,10 +9,10 @@
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
   <script src="index.js"></script>
-
+  <link rel="stylesheet" href="media_key.css">
 </head>
 
-<body> 
+<body>
   <div class="cabeçalho">
     <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
@@ -150,15 +150,13 @@
       <br>
     </p>
     <br>
-
-
-    <br>
     <div id="center">
-      <img src="Imagens/R (1).jpeg" alt="partes das ondas" width="75%">
-      <legend style="text-align: center;"><a href="http://fisica-marian3.blogspot.com/"> Imagem Dísponivel
-          Aqui</a>
-      </legend>
+      <img src="Imagens/R (1).jpeg" alt="Isaac Newton" width="45%">
     </div>
+
+    <legend style="margin-left: 7cm;">Disponivel em:<a href="http://fisica-marian3.blogspot.com/">
+        http://fisica-marian3.blogspot.com/</a>
+    </legend>
     <br>
     <div id="center">
       <h3><strong class="textosTitulo">Lei Da Inercia
@@ -166,15 +164,15 @@
     </div>
     <br>
     <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da
-      Inércia.
-      (HELERBROCK, Rafael, 2023).
+      Inércia
+      (HELERBROCK, 2023).
     </p>
     <br>
-    <p class="margem"> “Segundo Rafael Helerbrock (2023) "A primeira lei de Newton, também conhecida como princípio da
+    <blockquote> Segundo Rafael Helerbrock (2023) a primeira lei de Newton, também conhecida como princípio da
       inércia, afirma
       que todo corpo permanece em seu estado de repouso ou em movimento retilíneo e uniforme caso as forças que atuem
-      sobre ele se anulem.”
-    </p>
+      sobre ele se anulem.
+    </blockquote>
     <br>
     <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende
       ficar parado,
@@ -187,32 +185,38 @@
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
     <br>
-    <img src="Imagens/tirinha.jpg" alt="partes das ondas" width="100%">
-    <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
-        Aqui</a>
+    <div id="center">
+      <img src="Imagens/tirinha.jpg" alt="partes das ondas" width="80%">
+    </div>
+    <legend style="margin-left: 2.5cm;">
+      <p>Disponivel em<a href="https://brainly.com.br/tarefa/18695505"> https://brainly.com.br/tarefa/18695505</a></p>
     </legend>
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo"> Segunda Lei de Newton: Princípio Fundamental da Dinâmica
+      <h3><strong class="textosTitulo"> Segunda Lei de Newton:
+        </strong></h3>
+      <h3><strong class="textosTitulo"> Princípio Fundamental da Dinâmica
         </strong></h3>
     </div>
     <br>
     <p class="margem">
-      A segunda Lei de Newton é o princípio Fundamental da Dinâmica, (HELERBROCK, 2023).
-
+      A segunda Lei de Newton é o Princípio Fundamental da Dinâmica, (HELERBROCK, 2023).
+    </p>
+    <br>
+    <blockquote>
       “ Segundo Pâmella Raphaella Melo (2023) a segunda lei de
       Newton determina que se aplicarmos
       força sobre um objeto, ela produzirá movimento, cuja
       aceleração é proporcional à sua massa."
-
+    </blockquote>
+    <br>
+    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa do corpo que você quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
     </p>
-    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa
-      do corpo que
-      você quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
-      Vamos pensar num exemplo assim: você tem duas bolas num campo de futebol, mas vamos dispensar a grama, ar, e o
+      <p class="margem">Vamos pensar num exemplo assim: você tem duas bolas num campo de futebol, mas vamos dispensar a grama, ar, e o
       resto, quero dizer que não vamos levar em consideração atrito. Mas voltando às bolas, você tem uma bola de futebol
-      do seu tamanho, mas com uma massa pequena, e ao lado dela tem uma bola de madeira de uma massa um pouco maior
-      (HELERBROCK, 2023).
+      do seu tamanho, mas com uma massa pequena, e ao lado dela tem uma bola de madeira de uma massa um pouco maior (HELERBROCK, 2023).</p>
+      
+      <p class="margem">
       Pronto, agora vamos a prática, você começa a empurrar a bola de futebol, como ela é leve, você usa pouca força e
       também a aceleração dela não é muito alta, e se você soltá-la(sem dar impulso) ela não irá muito longe, mas agora
       vamos a de madeira, você começa a empurrá-la e percebe que precisa de mais força para tirá-la do repouso, mas como
@@ -224,12 +228,14 @@
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" width="100%">
-      <legend><a href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">Imagem Disponível Aqui</a>
-      </legend>
+      <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" width="70%">
+    </div>
+    <legend style="margin-left: 3.9cm;">Disponivel em:<a
+        href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm</a>
+    </legend>
 
-      <br>
-
+    <br>
+    <div id="center">
       <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
         </strong></h3>
     </div>
@@ -250,14 +256,18 @@
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" width="100%">
-      <legend><a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Imagem Disponível Aqui</a>
-      </legend>
+      <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" width="70%">
     </div>
+    <legend style="margin-left: 3.9cm;">Disponivel em:<a
+        href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm">
+        https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm</a>
+    </legend>
+
+    <br>
   </div>
 
 
-
+  <br>
   <div class="rodape"></div>
 
 </body>
