--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -128,11 +128,9 @@
       <br>
 
     </div>
-
     <div id="main">
       <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
         </div></span>
-
     </div>
   </div>
   </div>
@@ -143,18 +141,19 @@
     <br>
     <p class="margem"> Certo dia caiu uma maçã na cabeça de Sir Isaac Newton que então
       propôs a Lei da
-      Gravidade, então este mesmo cara (Newton) além de propor várias teorias e ser um dos maiores fisicos que ja se
+      Gravidade, então o mesmo (Newton) além de propor várias teorias e ser um dos maiores fisicos que ja se
       teve na historia e que contribuiu em todas as áreas de forma gigantesca, ele também propôs três leis que são
       fundamentais para a física e inclusive quando você for estudar física Leis de Newton é um assunto indispensável
-      para a sua vida acadêmica (GOUVEIA, 2023).
+      para a vida acadêmica (GOUVEIA, 2023).
       <br>
     </p>
     <br>
     <div id="center">
+      <p><strong class="bibliografia">Figura 1:</strong> Isaac Newton</p>
       <img src="Imagens/R (1).jpeg" alt="Isaac Newton" width="45%">
     </div>
 
-    <legend style="margin-left: 7cm;">Disponivel em:<a href="http://fisica-marian3.blogspot.com/">
+    <legend style="margin-left: 7cm;" class="ref-imagens">Disponivel em:<a href="http://fisica-marian3.blogspot.com/">
         http://fisica-marian3.blogspot.com/</a>
     </legend>
     <br>
@@ -168,10 +167,10 @@
       (HELERBROCK, 2023).
     </p>
     <br>
-    <blockquote> Segundo Rafael Helerbrock (2023) a primeira lei de Newton, também conhecida como princípio da
+    <blockquote> "Segundo Rafael Helerbrock (2023) a primeira lei de Newton, também conhecida como princípio da
       inércia, afirma
       que todo corpo permanece em seu estado de repouso ou em movimento retilíneo e uniforme caso as forças que atuem
-      sobre ele se anulem.
+      sobre ele se anulem."
     </blockquote>
     <br>
     <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende
@@ -180,13 +179,14 @@
       sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
       exemplo precisamos ir lá pro espaço, já que lá não tem ar nem gravidade para nos atrapalhar, agora dando o
       exemplo, voce esta la no espaço e joga uma caneta para qualquer lado, essa caneta irá continuar para sempre
-      viajando na velocidade que você jogou ela até que uma força exterior atravesse o caminho dela(como um asteroide,
+      viajando na velocidade que você jogou ela até que uma força exterior atravesse o caminho dela (como um asteroide,
       ou a caneta entrar em órbita de um objeto grande, apesar da massa da caneta não ser suficiente para ela entrar em
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/tirinha.jpg" alt="partes das ondas" width="80%">
+      <p><strong class="bibliografia">Figura 2:</strong> Analogia a Primeira Lei de Newton </p>
+      <img src="Imagens/tirinha.jpg" alt="Analogia a Primeira Lei de Newton" width="80%">
     </div>
     <legend style="margin-left: 2.5cm;">
       <p>Disponivel em<a href="https://brainly.com.br/tarefa/18695505"> https://brainly.com.br/tarefa/18695505</a></p>
@@ -210,13 +210,15 @@
       aceleração é proporcional à sua massa."
     </blockquote>
     <br>
-    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa do corpo que você quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
+    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa
+      do corpo que você quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
     </p>
-      <p class="margem">Vamos pensar num exemplo assim: você tem duas bolas num campo de futebol, mas vamos dispensar a grama, ar, e o
+    <p class="margem">Vamos pensar num exemplo assim: você tem duas bolas num campo de futebol, mas vamos dispensar a
+      grama, ar, e o
       resto, quero dizer que não vamos levar em consideração atrito. Mas voltando às bolas, você tem uma bola de futebol
-      do seu tamanho, mas com uma massa pequena, e ao lado dela tem uma bola de madeira de uma massa um pouco maior (HELERBROCK, 2023).</p>
-      
-      <p class="margem">
+      do seu tamanho, mas com uma massa pequena, e ao lado dela tem uma bola de madeira de uma massa um pouco maior
+      (HELERBROCK, 2023).</p>
+    <p class="margem">
       Pronto, agora vamos a prática, você começa a empurrar a bola de futebol, como ela é leve, você usa pouca força e
       também a aceleração dela não é muito alta, e se você soltá-la(sem dar impulso) ela não irá muito longe, mas agora
       vamos a de madeira, você começa a empurrá-la e percebe que precisa de mais força para tirá-la do repouso, mas como
@@ -228,12 +230,12 @@
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" width="70%">
+      <p><strong class="bibliografia">Figura 3:</strong> Demonstração da Segunda Lei de Newton</p>
+      <img src="Imagens/segunda lei.webp" alt="Demonstração da Segunda Lei de Newton" width="70%">
     </div>
     <legend style="margin-left: 3.9cm;">Disponivel em:<a
         href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm</a>
     </legend>
-
     <br>
     <div id="center">
       <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
@@ -244,7 +246,6 @@
       “ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
       para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
       reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."
-
       Mas FISICAMENTE FALANDO, ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
       vários exemplos. O primeiro, se alguém chutar uma pedra e jogá-la longe, mas a pedra também vai “chutar de volta”,
       parece estranho, mas calma, ao menos que o alguém seja um robô ao chutar a pedra sente dor, e essa dor é a reação
@@ -256,20 +257,33 @@
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" width="70%">
+      <p><strong class="bibliografia">Figura 4:</strong> Demonstração  da Terceira Lei de Newton-Lei</p>
+      <img src="Imagens/terceiralei.webp" alt="Demonstração da Terceira Lei de Newton-Lei" width="70%">
     </div>
     <legend style="margin-left: 3.9cm;">Disponivel em:<a
         href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm">
         https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm</a>
     </legend>
-
     <br>
+    <h1 style="margin-left: 3cm ;"><strong class="textosTitulo"> Bibliografia </strong></h1>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm;">
+      HELERBROCK, Rafael. <strong class="bibliografia">"Primeira Lei de Newton"; </strong> Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/primeira-lei-newton.htm. Acesso em 15 de março de 2023.
+    </p>
+    <br>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm;"> MELO, Pâmella Raphaella. <strong class="bibliografia"> "Segunda lei de Newton"; </strong> Brasil Escola. Disponível em:
+    https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.
+  </p>
+    <br>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm;"> HELERBROCK, Rafael. <strong class="bibliografia"> "Terceira lei de Newton"; </strong> Brasil Escola. Disponível em:
+    https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm. Acesso em 19 de março de 2023.
+  </p>
+  <br>
   </div>
-
-
   <br>
   <div class="rodape"></div>
-
 </body>
-
 </html>
