--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -257,7 +257,7 @@
     </p>
     <br>
     <div id="center">
-      <p><strong class="bibliografia">Figura 4:</strong> Demonstração  da Terceira Lei de Newton-Lei</p>
+      <p><strong class="bibliografia">Figura 4:</strong> Demonstração da Terceira Lei de Newton-Lei</p>
       <img src="Imagens/terceiralei.webp" alt="Demonstração da Terceira Lei de Newton-Lei" width="70%">
     </div>
     <legend style="margin-left: 3.9cm;">Disponivel em:<a
@@ -273,17 +273,20 @@
     </p>
     <br>
     <br>
-    <p style="margin-left: 3cm; margin-right: 2cm;"> MELO, Pâmella Raphaella. <strong class="bibliografia"> "Segunda lei de Newton"; </strong> Brasil Escola. Disponível em:
-    https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.
-  </p>
+    <p style="margin-left: 3cm; margin-right: 2cm;"> MELO, Pâmella Raphaella. <strong class="bibliografia"> "Segunda lei
+        de Newton"; </strong> Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.
+    </p>
     <br>
     <br>
-    <p style="margin-left: 3cm; margin-right: 2cm;"> HELERBROCK, Rafael. <strong class="bibliografia"> "Terceira lei de Newton"; </strong> Brasil Escola. Disponível em:
-    https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm. Acesso em 19 de março de 2023.
-  </p>
-  <br>
+    <p style="margin-left: 3cm; margin-right: 2cm;"> HELERBROCK, Rafael. <strong class="bibliografia"> "Terceira lei de
+        Newton"; </strong> Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm. Acesso em 19 de março de 2023.
+    </p>
+    <br>
   </div>
   <br>
   <div class="rodape"></div>
 </body>
+
 </html>
