--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -14,7 +14,9 @@
 
 <body>
   <div class="cabeçalho">
-    <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
+    <a href="index.html">
+      <h1 class="center"><strong class="cabeca"> Física Na Mente </strong></h1>
+    </a>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <h1 style="text-align: center;">Tópicos</h1>
@@ -136,7 +138,7 @@
   </div>
   <div class="conteudo">
     <div id="center">
-      <h1><strong class="textosTitulo"><em> Leis De Newton </em> </strong></h1>
+      <h1> Leis De Newton </strong></h1>
     </div>
     <br>
     <p class="margem"> Certo dia caiu uma maçã na cabeça de Sir Isaac Newton que então
@@ -158,8 +160,8 @@
     </legend>
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo">Lei Da Inercia
-        </strong></h3>
+      <h1>Lei Da Inercia
+      </h1>
     </div>
     <br>
     <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da
@@ -193,10 +195,10 @@
     </legend>
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo"> Segunda Lei de Newton:
-        </strong></h3>
-      <h3><strong class="textosTitulo"> Princípio Fundamental da Dinâmica
-        </strong></h3>
+      <h1> Segunda Lei de Newton:
+      </h1>
+      <h1> Princípio Fundamental da Dinâmica
+      </h1>
     </div>
     <br>
     <p class="margem">
@@ -238,8 +240,8 @@
     </legend>
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo"> Terceira Lei de Newton-Lei de Ação e Reação
-        </strong></h3>
+      <h1> Terceira Lei de Newton-Lei de Ação e Reação
+      </h1>
     </div>
     <br>
     <p class="margem">
@@ -265,7 +267,7 @@
         https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm</a>
     </legend>
     <br>
-    <h1 style="margin-left: 3cm ;"><strong class="textosTitulo"> Bibliografia </strong></h1>
+    <h1 style="margin-left: 3cm ;"> Bibliografia </h1>
     <br>
     <p style="margin-left: 3cm; margin-right: 2cm;">
       HELERBROCK, Rafael. <strong class="bibliografia">"Primeira Lei de Newton"; </strong> Brasil Escola. Disponível em:
