--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -138,15 +138,14 @@
   </div>
   <div class="conteudo">
     <div id="center">
-      <h1> Leis De Newton </strong></h1>
+      <h1 style="font-size: 12pt;"> LEIS DE NEWTON </h1>
     </div>
     <br>
-    <p class="margem"> Certo dia caiu uma maçã na cabeça de Sir Isaac Newton que então
+    <p class="margem"> Certo dia caiu uma maçã na cabeça de Sir Isaac Newton que então,
       propôs a Lei da
-      Gravidade, então o mesmo (Newton) além de propor várias teorias e ser um dos maiores fisicos que ja se
-      teve na historia e que contribuiu em todas as áreas de forma gigantesca, ele também propôs três leis que são
-      fundamentais para a física e inclusive quando você for estudar física Leis de Newton é um assunto indispensável
-      para a vida acadêmica (GOUVEIA, 2023).
+      Gravidade, depois, o mesmo (Newton) além de propor várias teorias e ser um dos maiores físicos que já se
+      teve na história e que contribuiu em todas as áreas de forma gigantesca, ele também propôs três leis que são
+      fundamentais para a física e inclusive é um dos assuntos índispensaiveis para a vida acadêmica (GOUVEIA, 2023).
       <br>
     </p>
     <br>
@@ -160,7 +159,7 @@
     </legend>
     <br>
     <div id="center">
-      <h1>Lei Da Inercia
+      <h1 style="font-size: 12pt;">PRIMEIRA LEI DE NEWTON - LEI DA INÉRCIA
       </h1>
     </div>
     <br>
@@ -177,11 +176,11 @@
     <br>
     <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende
       ficar parado,
-      até venha alguém mexer nele, exemplo, seu celular, se você deixar ele no sofá ele ficará lá até alguém pegar ele,
+      até venha alguém mexer nele, exemplo, um celular, se for deixado no sofá, ele ficará lá até alguém venha a pega-lo,
       sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
-      exemplo precisamos ir lá pro espaço, já que lá não tem ar nem gravidade para nos atrapalhar, agora dando o
-      exemplo, voce esta la no espaço e joga uma caneta para qualquer lado, essa caneta irá continuar para sempre
-      viajando na velocidade que você jogou ela até que uma força exterior atravesse o caminho dela (como um asteroide,
+      exemplo precisa-se ir lá para o espaço, já que lá não tem ar nem gravidade para atrapalhar, agora o
+      exemplo é, alguém esta lá no espaço e joga uma caneta para qualquer lado, essa caneta irá continuar para sempre
+      viajando na velocidade que você jogou ela até que, uma força exterior atravesse o caminho dela (como um asteroide,
       ou a caneta entrar em órbita de um objeto grande, apesar da massa da caneta não ser suficiente para ela entrar em
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
@@ -195,9 +194,9 @@
     </legend>
     <br>
     <div id="center">
-      <h1> Segunda Lei de Newton:
+      <h1 style="font-size: 12pt;"> SEGUNDA LEI DE NEWTON:
       </h1>
-      <h1> Princípio Fundamental da Dinâmica
+      <h1 style="font-size: 12pt;"> PRICÍPIO FUNDAMENTAL DA DINÂMICA
       </h1>
     </div>
     <br>
@@ -212,12 +211,12 @@
       aceleração é proporcional à sua massa."
     </blockquote>
     <br>
-    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que você precisa aplicar uma força proporcionalmente a massa
-      do corpo que você quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
+    <p class="margem">Mas FISICAMENTE FALANDO, esta lei diz que se for aplicado uma força proporcionalmente a massa
+      do corpo que se quer mover, e também que, a aceleração deste corpo será proporcional a massa (HELERBROCK, 2023).
     </p>
-    <p class="margem">Vamos pensar num exemplo assim: você tem duas bolas num campo de futebol, mas vamos dispensar a
+    <p class="margem">Um exemplo assim: há duas bolas num campo de futebol, dispensando a
       grama, ar, e o
-      resto, quero dizer que não vamos levar em consideração atrito. Mas voltando às bolas, você tem uma bola de futebol
+      resto, a ideia é que o atrito não deverá afetar no resultado. Tomando novamente as bolas, há uma bola de futebol
       do seu tamanho, mas com uma massa pequena, e ao lado dela tem uma bola de madeira de uma massa um pouco maior
       (HELERBROCK, 2023).</p>
     <p class="margem">
@@ -240,21 +239,22 @@
     </legend>
     <br>
     <div id="center">
-      <h1> Terceira Lei de Newton-Lei de Ação e Reação
+      <h1 style="font-size: 12pt;"> TERCEIRA LEI DE NEWTON - LEI DE AÇÃO E REAÇÃO
       </h1>
     </div>
     <br>
-    <p class="margem">
-      “ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
-      para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
-      reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."
+    
+      <blockquote>“ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
+        para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
+        reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."</blockquote>
+        <p class="margem">
       Mas FISICAMENTE FALANDO, ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
       vários exemplos. O primeiro, se alguém chutar uma pedra e jogá-la longe, mas a pedra também vai “chutar de volta”,
       parece estranho, mas calma, ao menos que o alguém seja um robô ao chutar a pedra sente dor, e essa dor é a reação
       sobre a ação de chutar. Outro exemplo é quando se precisa empurrar algo pesado, uma geladeira pro caso, se alguém
       tentar empurrar ela, a geladeira “devolverá” ficando parada, a geladeira faz força pra ficar parada, a ação é
       empurrar, e a reação é ela fazer força pra ficar parada. É só pra deixar claro esses exemplos são figurados, mas
-      funcionam, até porque pedras e geladeiras no mundo real são seres inanimados.(HELERBROCK, 2023)
+      funcionam, até porque pedras e geladeiras no mundo real são seres inanimados (HELERBROCK, 2023).
       <br>
     </p>
     <br>
@@ -267,28 +267,47 @@
         https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm</a>
     </legend>
     <br>
-    <h1 style="margin-left: 3cm ;"> Bibliografia </h1>
+    <h1 style="margin-left: 3cm ;"> Refêrencias </h1>
     <br>
-    <p style="margin-left: 3cm; margin-right: 2cm;">
-      HELERBROCK, Rafael. <strong class="bibliografia">"Primeira Lei de Newton"; </strong> Brasil Escola. Disponível em:
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">
+      HELERBROCK, Rafael. <strong class="bibliografia">"Primeira Lei de Newton". </strong> Brasil Escola. Disponível em:
       https://brasilescola.uol.com.br/fisica/primeira-lei-newton.htm. Acesso em 15 de março de 2023.
     </p>
     <br>
     <br>
-    <p style="margin-left: 3cm; margin-right: 2cm;"> MELO, Pâmella Raphaella. <strong class="bibliografia"> "Segunda lei
-        de Newton"; </strong> Brasil Escola. Disponível em:
-      https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.
-    </p>
-    <br>
-    <br>
-    <p style="margin-left: 3cm; margin-right: 2cm;"> HELERBROCK, Rafael. <strong class="bibliografia"> "Terceira lei de
-        Newton"; </strong> Brasil Escola. Disponível em:
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> HELERBROCK, Rafael. <strong class="bibliografia"> "Terceira lei de
+        Newton". </strong> Brasil Escola. Disponível em:
       https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm. Acesso em 19 de março de 2023.
     </p>
     <br>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> MELO, Pâmella Raphaella. <strong class="bibliografia"> "Segunda lei
+      de Newton". </strong> Brasil Escola. Disponível em:
+    https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.
+  </p>  
   </div>
   <br>
-  <div class="rodape"></div>
+  <div class="rodape">
+
+    <div class="texto-rodape">
+      <div class="parte-rodape-esquerdo">
+        <strong class="cabeca12">
+          <h4>Desenvolvedores:
+          </h4>
+          <p>Anthony Gabriel Loche dos Reis</p>
+          <p>Claudio Anzini Neto</p>
+          <p>Gustavo Correa Kruger</p>
+          <p>Pedro Henrique da Silva Malaquias</p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        </strong>
+      </div>
+
+
+      <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
+            alt="Logo IFC" width="300px"></strong></div>
+
+    </div>
+  </div>
 </body>
 
 </html>
