--- a/index.html
+++ b/index.html
@@ -258,12 +258,32 @@
         </p>
         <br>
       </div>
-      
+
 
     </div>
   </div>
   <div class="espaco"></div>
-  <div class="rodape"></div>
+  <div class="rodape">
+
+    <div class="texto-rodape">
+      <div class="parte-rodape-esquerdo">
+        <strong class="cabeca12">
+          <h4>Desenvolvedores:
+          </h4>
+          <p>Anthony Gabriel Loche dos Reis</p>
+          <p>Claudio Anzini Neto</p>
+          <p>Gustavo Correa Kruger</p>
+          <p>Pedro Henrique da Silva Malaquias</p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        </strong>
+      </div>
+
+
+      <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
+            alt="Logo IFC" width="300px"></strong></div>
+
+    </div>
+  </div>
 
   <div id="magica">
     <div id="star-wars">
@@ -304,7 +324,7 @@
         Ela nos convida a dançar na valsa dos átomos,
         A desvendar os mistérios cósmicos, em todos os planos.
       </p>
-      <p class="star"> 
+      <p class="star">
         Assim, a Física nos inspira a contemplar o infinito,
         A buscar respostas, num constante e eterno aflito.
         E enquanto existir curiosidade em nossos corações,
