--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -189,7 +189,7 @@
       <p><strong class="bibliografia">Figura 2:</strong> Analogia a Primeira Lei de Newton </p>
       <img src="Imagens/tirinha.jpg" alt="Analogia a Primeira Lei de Newton" width="80%">
     </div>
-    <legend style="margin-left: 2.5cm;">
+    <legend style="margin-left: 2.5cm;" class="ref-imagens-2">
       <p>Disponivel em<a href="https://brainly.com.br/tarefa/18695505"> https://brainly.com.br/tarefa/18695505</a></p>
     </legend>
     <br>
@@ -234,7 +234,7 @@
       <p><strong class="bibliografia">Figura 3:</strong> Demonstração da Segunda Lei de Newton</p>
       <img src="Imagens/segunda lei.webp" alt="Demonstração da Segunda Lei de Newton" width="70%">
     </div>
-    <legend style="margin-left: 3.9cm;">Disponivel em:<a
+    <legend style="margin-left: 3.9cm;" class="ref-imagens-3">Disponivel em:<a
         href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm</a>
     </legend>
     <br>
@@ -247,6 +247,7 @@
       <blockquote>“ Segundo Rafael Helerbrock (2023), a terceira lei de Newton, conhecida como lei da ação e reação, afirma que,
         para toda força de ação que é aplicada a um corpo, surge uma força de reação em um corpo diferente. Essa força de
         reação tem a mesma intensidade da força de ação e atua na mesma direção, mas com sentido oposto."</blockquote>
+        <br>
         <p class="margem">
       Mas FISICAMENTE FALANDO, ela quer dizer que se você aplica uma força a algo ele devolve de alguma forma, posso dar
       vários exemplos. O primeiro, se alguém chutar uma pedra e jogá-la longe, mas a pedra também vai “chutar de volta”,
@@ -262,7 +263,7 @@
       <p><strong class="bibliografia">Figura 4:</strong> Demonstração da Terceira Lei de Newton-Lei</p>
       <img src="Imagens/terceiralei.webp" alt="Demonstração da Terceira Lei de Newton-Lei" width="70%">
     </div>
-    <legend style="margin-left: 3.9cm;">Disponivel em:<a
+    <legend style="margin-left: 3.9cm;" class="ref-imagens-4">Disponivel em:<a
         href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm">
         https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm</a>
     </legend>
