--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -154,7 +154,7 @@
       <img src="Imagens/R (1).jpeg" alt="Isaac Newton" width="45%">
     </div>
 
-    <legend style="margin-left: 7cm;" class="ref-imagens">Disponivel em:<a href="http://fisica-marian3.blogspot.com/">
+    <legend  class="ref-imagens">Disponivel em:<a href="http://fisica-marian3.blogspot.com/">
         http://fisica-marian3.blogspot.com/</a>
     </legend>
     <br>
@@ -189,7 +189,7 @@
       <p><strong class="bibliografia">Figura 2:</strong> Analogia a Primeira Lei de Newton </p>
       <img src="Imagens/tirinha.jpg" alt="Analogia a Primeira Lei de Newton" width="80%">
     </div>
-    <legend style="margin-left: 2.5cm;" class="ref-imagens-2">
+    <legend  class="ref-imagens-2">
       <p>Disponivel em<a href="https://brainly.com.br/tarefa/18695505"> https://brainly.com.br/tarefa/18695505</a></p>
     </legend>
     <br>
@@ -234,7 +234,7 @@
       <p><strong class="bibliografia">Figura 3:</strong> Demonstração da Segunda Lei de Newton</p>
       <img src="Imagens/segunda lei.webp" alt="Demonstração da Segunda Lei de Newton" width="70%">
     </div>
-    <legend style="margin-left: 3.9cm;" class="ref-imagens-3">Disponivel em:<a
+    <legend class="ref-imagens-3">Disponivel em:<a
         href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm">https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm</a>
     </legend>
     <br>
@@ -263,7 +263,7 @@
       <p><strong class="bibliografia">Figura 4:</strong> Demonstração da Terceira Lei de Newton-Lei</p>
       <img src="Imagens/terceiralei.webp" alt="Demonstração da Terceira Lei de Newton-Lei" width="70%">
     </div>
-    <legend style="margin-left: 3.9cm;" class="ref-imagens-4">Disponivel em:<a
+    <legend class="ref-imagens-4">Disponivel em:<a
         href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm">
         https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm</a>
     </legend>
@@ -286,6 +286,7 @@
       de Newton". </strong> Brasil Escola. Disponível em:
     https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm. Acesso em 19 de março de 2023.
   </p>  
+  <br>
   </div>
   <br>
   <div class="rodape">
